# llm-secrets

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  TODO.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  release.yml
docs/: SECURITY-MODEL.md  TUTORIAL.md  USAGE.md  integration-guide.md
docs/adr/: 0001-rust-rewrite.md  0002-no-get-command.md  0003-store-layout.md  0004-session-identity.md  0005-mcp-server.md  0006-macaroons.md  0007-macaroon-merge.md  0008-toml-profiles.md
src/: agent.rs  cli.rs  error.rs  identity.rs  lease.rs  macaroon.rs  main.rs  mcp.rs  policy.rs  profile.rs  store.rs
src/llm_secrets/: __init__.py  cli.py  config.py  secrets.py
tests/: cli.rs  test_secrets.py
