[package]
name = "llm-secrets"
version = "3.0.1"
edition = "2024"
description = "Workload identity for AI agents — prove who you are, access only what you should, for only as long as you need"
license = "MIT"
repository = "https://github.com/adjoint-uk/llm-secrets"
homepage = "https://github.com/adjoint-uk/llm-secrets"
keywords = ["secrets", "security", "ai-agent", "workload-identity", "encryption"]
categories = ["command-line-utilities", "cryptography", "authentication"]

[[bin]]
name = "llms"
path = "src/main.rs"

[dependencies]
age = "0.11"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
secrecy = "0.10"
zeroize = "1"
thiserror = "2"
dirs = "6"
console = "0.15"
dialoguer = "0.11"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
subtle = "2"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
